implement extend supscription

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -144,7 +144,7 @@
     "privacy": "Privacy",
     "terms": "Terms",
     "cookiePolicy": "Cookie Policy",
-    "copyright": "© 2025 EcoCollect. All rights reserved.",
+    "copyright": "© 2025 LeQuocSonGiang. All rights reserved.",
     "twitter": "Twitter",
     "instagram": "Instagram",
     "linkedin": "LinkedIn",
